updated text below Ishidres heading

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="content">
         <div class="heading tracking-in-expand">Ishidres</div>
-        <p class="tracking-in-expand-delay">Node.js and Web Developer // Hobby Artist</p>
+        <p class="tracking-in-expand-delay">16 years old passionate Node.JS and web developer.</p>
       
         <div class="buttons unselectable tracking-in-expand-delay2">
             <a href="github/" target="_blank">
