added patreon button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
                 DeviantArt
               </button>
             </a>
+
+            <a href="patreon/" target="_blank">
+              <button class="button patreon-button">
+                <i class="fab fa-patreon"></i>
+                Patreon
+              </button>
+            </a>
         </div>
     </div>
 
