added location to title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="content">
         <div class="heading tracking-in-expand">Ishidres</div>
-        <p class="tracking-in-expand-delay">Node.js and web developer</p>
+        <p class="tracking-in-expand-delay">Node.js and web developer located in Germany</p>
       
         <div class="buttons unselectable tracking-in-expand-delay2">
             <a href="github/" target="_blank">
